package seedu.clialgo;

public class Command {
}
