package seedu.duke;

// Placeholder class
public class Storage {
}
